style: better visualization

--- a/main.css
+++ b/main.css
@@ -3,7 +3,8 @@ body {
 }
 
 canvas {
+    margin: 15px;
     border: 1px solid black;
-    width: 600px;
-    height: 600px;
+    width: 615px;
+    height: 615px;
 }
