--- a/main.css
+++ b/main.css
@@ -8,3 +8,23 @@ canvas {
     width: 615px;
     height: 615px;
 }
+
+#score {
+    position: absolute;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    text-align: center;
+}
+
+#score p {
+    margin: 0 20px;
+}
+
+#score span {
+    font-weight: bold;
+}
